# botReport

./: .env.example  README.md  background.py  handlers.py  keybords.py  main.py  pyproject.toml  requirements.txt  vercel.json
api/: webhook.py
bot/: __init__.py  config.py  equipment_handlers.py  handlers.py  keyboards.py  report_handlers.py  states.py
data/: __init__.py  НОВИЙ прайс для ІНЖЕНЕРІВ 06.2024.xlsx
utils/: __init__.py  background.py  excel_manager.py
