
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bot-report"
version = "0.1.0"
description = "Телеграм бот для звітів інженерів"
authors = ["Andrew Pechnikov <andrij.pechnikov@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
aiogram = ">=3.18.0"
flask = ">=3.1.0"
pandas = ">=2.2.3"
requests = ">=2.32.3"
openpyxl = ">=3.1.5"
python-dotenv = ">=1.0.0"
